# Tracking-Pipeline

./: .gitignore  README.md  pyproject.toml
configs/: base.yaml  beam_neighbor_hungarian_weighted.yaml  benchmark_curated_real.yaml  benchmark_long_vehicle_kalman_real.yaml  benchmark_long_vehicle_real.yaml  euclidean_voxel.yaml  ground_removed_icp.yaml  hdbscan_consensus.yaml  hungarian_weighted.yaml  kalman_feature_global_then_local.yaml  kalman_generalized_icp.yaml  kalman_icp.yaml  kalman_kiss_matcher_then_icp.yaml  kalman_registration.yaml  kalman_small_gicp.yaml  kalman_small_gicp_fast.yaml  kalman_voxel.yaml  long_vehicle_beam_neighbor_hungarian_weighted.yaml  long_vehicle_beam_neighbor_kalman_weighted.yaml  long_vehicle_hungarian_weighted.yaml  long_vehicle_kalman_weighted.yaml  long_vehicle_range_image_depth_jump_kalman_weighted.yaml  long_vehicle_range_image_hungarian_weighted.yaml  long_vehicle_range_image_kalman_weighted.yaml  range_image_depth_jump_hungarian_weighted.yaml  range_image_hungarian_weighted.yaml
docs/: artifacts-and-benchmarking.md  config-reference.md
scripts/: setup.sh  setup_pointnext.sh
src/tracking_pipeline/: __init__.py  cli.py
src/tracking_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/tracking_pipeline/application/: benchmark_run.py  class_normalization.py  class_statistics.py  classification.py  factories.py  gt_matching.py  (+6 more)
tests/fixtures/: sample_a42.pb
tests/integration/: test_algorithm_switching.py  test_benchmark_runner.py  test_run_pipeline.py
tests/unit/: test_cli.py
(+67 files in other folders)
